# airflow-azure-starter-dags

./: .gitignore  404.html  CaddyFile  Dockerfile  README.md  docker-compose.yaml  index.html  prek.toml  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  requirements.txt
.github/workflows/: deploy-properdocs.yml
dags/: duckdb_example.py  hello_github.py  index.html
dags/duckdb_example/: index.html
dags/hello_github/: index.html
devcontainer/: index.html
docs/: .codespell-wordlist.txt  README.md  properdocs.yml  pyproject.toml
docs/scripts/: generate_dag_docs.py  generate_devcontainer_docs.py
docs/src/: devcontainer.md  getting-started.md  index.md  update-docs.md
docs/src/dags/: .pages  duckdb_example.md  hello_github.md  hello_world.md  index.md
docs/src/templates/: dag.md.j2  devcontainer.md.j2
docs/templates/: dag.md.j2
getting-started/: index.html
scripts/: generate_dag_docs.py
search/: search_index.json
update-docs/: index.html
