[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-materialx>=10.1.3",
    "properdocs>=1.6.7",
    "pymdown-extensions>=10.21.2",
]
